# clawdshell

./: Cargo.toml  README.md  install.cmd  install.ps1  install.sh
.github/workflows/: release.yml  test-install.yml
docs/superpowers/plans/: 2026-03-31-clawdshell-implementation.md
docs/superpowers/specs/: 2026-03-31-clawdshell-design.md
src/: config.rs  detect.rs  greeting.rs  help_extra.txt  install.rs  lib.rs  main.rs  shell.rs
src/companion/: animate.rs  card.rs  mod.rs  names.rs  render.rs  sprites.rs
tests/: cli_test.rs  companion_test.rs  config_test.rs  detect_test.rs
