[package]
name = "clawdshell"
version = "0.1.0"
edition = "2021"
description = "A login shell that launches AI coding tools. You weren't using your terminal anyways."
license = "MIT"

[lib]
name = "clawdshell"
path = "src/lib.rs"

[[bin]]
name = "clawdshell"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
which = "7"
crossterm = "0.28"
ratatui = "0.29"
getrandom = "0.2"
dialoguer = "0.11"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
